# notion_week_report

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
src/notion_week_report/: __init__.py  config.py  deepseek_client.py  github_client.py  main.py  notion_client.py  report_generator.py  scheduler.py
